rust/macros/tests/invalid/target/rls/debug/deps/triple_arguments_rs-5d413cfa131eb208.d
e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\triple_arguments_rs-5d413cfa131eb208.rmeta: triple-arguments.rs

e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\triple_arguments_rs-5d413cfa131eb208.d: triple-arguments.rs

triple-arguments.rs:
